Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5287

.NET binding does not set Assembly version number

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.25
    • 0.25
    • C++ Build
    • Windows .NET binding; any visual studio, any platform, any configuration

    Description

      The build scheme sets the File and Product version numbers. A stock trunk build will set the File Properties version numbers to 0.22.0.1. Overrides can set these to any desired release values, for instance 1.2.0.100.

      However, in file AssemblyInfo.cpp the Assembly version number is set to
      [assembly:AssemblyVersionAttribute("1.0.*")];

      The net effect is that the Assembly version number is autogenerated and not a predictable value.

      This issue tracks creating a cmake template AssemblyInfo.cpp file and using configure_file to generate the source with the desired version number in it.

      Attachments

        Activity

          People

            chug Charles E. Rolke
            chug Charles E. Rolke
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: