QPID-5287: .NET binding does not set AssemblyVersion to build version. The fix is 1. rename the AssemblyInfo.cpp to indicate that it is a template. 2. put replacement strings into the template (see sessionreceiver for correct pattern). 3. configure the template during cmake run. 4. Refer to generated file in projects that need it.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1538674 13f79535-47bb-0310-9956-ffa450edef68